# Pongroids

./: .gitignore  CMakeLists.txt  README  singleplayer.yaml
android/: AndroidManifest.xml
android/jni/: gear2d  gear2d-components
android/jni/glue/: Android.mk
android/res/values/: strings.xml
android/src/com/gear2d/pongroids/: Pongroids.java
component-src/pongroids-components/: CMakeLists.txt  aibar.cc  asteroid.cc  bar.cc  entrance.cc  match.cc  pong.cc  pongroids-components.kdev4
component-src/pongroids-components/.kdev4/: pongroids-components.kdev4
game/: LICENSE.txt  gamescene.yaml  gear2d.yaml  singleplayer.yaml  versus.yaml
game/img-src/: circleroid.xcf
game/objects/: aibarright.yaml  asteroid16.yaml  asteroid32.yaml  asteroid8.yaml  background.yaml  barleft.yaml  barright.yaml  ceil.yaml  circleroid.yaml  entrance.yaml  floor.yaml  left.yaml  leftfield.yaml  match.yaml  pong.yaml  right.yaml  rightfield.yaml
game/objects/entrance/: mainmenu.yaml  newgamemenu.yaml  pong.yaml  roids.yaml
img-src/: mainbg.xcf  plane.xcf
src/: Android.mk  CMakeLists.txt  aibar.cc  asteroid.cc  bar.cc  bindposition.cc  entrance.cc  mainmenu.cc  match.cc  menumouseover.cc  pong.cc
src/pongroids-components/: CMakeLists.txt  aibar.cc  asteroid.cc  bar.cc  entrance.cc  match.cc  pong.cc
